compiler/tools/fpp-check/test/invalid_symbols/constant_as_type.fpp
constant a = 0
array A = [3] a
